force-app/main/default/objects/Account/fields/Account_Manager_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Contact_Info__c</fullName>
    <formula>Owner.Manager.Email   &amp;  Owner.Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Contact Info</label>
    <type>Text</type>
</CustomField>