force-app/main/default/objects/Account/fields/Closed_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opportunity__c</fullName>
    <label>Closed Won Opportunity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>