force-app/main/default/objects/Account/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Satisfaction Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>