force-app/main/default/objects/Account/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>BillingStreet &amp;&quot;,&quot;&amp; BillingCity &amp;&quot;, &quot;&amp; BillingState &amp;&quot;,&quot;&amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>