force-app/main/default/objects/Account/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Primary_First_Name__c  &amp;  Primary_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>