force-app/main/default/objects/Account/fields/Primary_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_First_Name__c</fullName>
    <label>Primary First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>