force-app/main/default/objects/Account/fields/Primary_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Last_Name__c</fullName>
    <label>Primary Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>