force-app/main/default/objects/Account/validationRules/Account_Number_Only_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Only_Numeric</fullName>
    <active>false</active>
    <description>ccount Number must be numeric only</description>
    <errorConditionFormula>NOT(REGEX( AccountNumber ,&quot;[0-9]+$&quot;))</errorConditionFormula>
    <errorMessage>Account Number must be numeric only</errorMessage>
</ValidationRule>