force-app/main/default/objects/Account/validationRules/Annual_Revenue_field_isgreater_than100K.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_field_isgreater_than100K</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue &lt;1000000</errorConditionFormula>
    <errorMessage>The Abishek ne bola hai error mssg aana chahiye</errorMessage>
</ValidationRule>