force-app/main/default/objects/Account/validationRules/Rating_field_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_field_is_not_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR( ISPICKVAL( Type ,&quot;Customer - Direct&quot;),ISPICKVAL( Type ,&quot;Customer - Channel&quot;)),ISBLANK(TEXT( Rating )))</errorConditionFormula>
    <errorMessage>Rating field is not blank</errorMessage>
</ValidationRule>