force-app/main/default/objects/Account/validationRules/Restrict_Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Annual_Revenue</fullName>
    <active>false</active>
    <description>Annual Revenue must not exceed 1,000,000</description>
    <errorConditionFormula>AnnualRevenue  &gt; 1000000</errorConditionFormula>
    <errorMessage>Annual Revenue must not exceed 1,000,000</errorMessage>
</ValidationRule>